# wht-update-tool

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  SerialPortYmodem.pro  widget.cpp  widget.h  widget.ui  升级改动说明.md
.github/workflows/: release.yml
